# embassy-pico

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
