[package]
name = "embassy-pico"
version = "0.1.0"
edition = "2021"
authors = ["Blue Zephyr <blue.zephyr.git@gmail.com>"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt =  "0.3"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
